--- a/styles.css
+++ b/styles.css
@@ -4,202 +4,129 @@
     --verydarkblue: hsl(212, 21%, 14%);
     --darkgrayishblue: hsl(228, 12%, 48%);
     }
-    
-    * {
-        padding: 0;
-        margin: 0;
-    }
-    
-    .container {
-        background-color: var(--cream);
-        display: grid;
-        grid-template-columns:  30vw 20vw 20vw 30vw;
-        grid-template-rows: 20vh 30vh 30vh 20vh;
-        min-width: 100vw;
-        min-height: 100vh;
-    }
-    
-    .preview {
-        margin-left: auto;
-        grid-column: 2/3;
-        grid-row: 2/4;
-        /* min-height: 100vh */
-    }
-    
-    img {
-        width: 20vw;
-        height: 60vh;
-        border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;    
-    }
-    
-    
-    .details {
-        display: grid;
-        background-color: white;
-        border-top-right-radius: 20px;
-        border-bottom-right-radius: 20px;
-        padding: 2rem;
-        grid-column: 3/4;
-        grid-row: 2/4;
-        justify-content: center;
-    }
-    
-    h2 {
-        font-family: 'Montserrat', serif;
-        color: var(--darkcyan);
-        letter-spacing: .5rem;
-        font-size: 1.3rem;
-    }
-    
-    h1 {
-        font-family: 'Fraunces', serif;
-        font-size: 3rem;
-        font-weight: 700;
-        line-height: 1;
-    }
-    
-    h3 {
-        font-family: 'Fraunces', serif;
-        font-size: 3rem;
-        font-weight: 700;
-        line-height: .8;
-        color: var(--darkcyan);
-    }
-    
-    p {
-        color: var(--darkgrayishblue);
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1.2rem;
-        line-height: 1.5;
-    }
-    
-    .pricing {
-        display: grid;
-        
-    }
 
-    h4 {
-        padding: .5rem 2rem;
-        color: var(--darkcyan);
-        font-size: 1.2rem;
-        grid-column: 2/3;
-        font-family: 'Montserrat', sans-serif;
-        text-decoration: line-through;
-    }
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+
+.container {
+
+    background-color: var(--cream);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 90vh 10vh;
+    place-items: center stretch ;
     
-    h5 {
-        margin: auto;
-        grid-row: 1;
-        font-size: 1rem;
-        padding-top: 0rem;
-    }
+}
+
+.preview {
+    display: grid;
+    grid-column: 1/2;
+    grid-row: 1;
+    justify-items: right;
+}
+
+img {
+    height: 70vh;
+    width: 23vw;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     
-    .cart img {
-        position: relative;        
-        width: 20px;
-        height: 20px;
-        grid-row: 1;
-        margin-left: auto;
-        
-        
-    }
+}
 
-    .cart {      
-        display: grid;
-        grid-template-columns: 33% 33% 33%;
-        text-align: center;
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1.2rem;
-        color: white;
-        border-radius: 10px;
-        align-content: center;
-        background-color: var(--darkcyan);
-        
-    }
+.details {
+    display: grid;
+    height: 70vh;
+    width: 23vw;
+    background-color: white;
+    grid-column: 2/3;
+    grid-row: 1;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     
-    .attribution{
-        background-color: white;
-        font-family: Montserrat;
-        font-size: 1rem;
-        display: grid;
-        grid-column: 2/4;
-        grid-row: 4;
-        text-align: center; 
-        justify-content: center;
-        align-content: center;
-        margin: 4rem 15rem;
-        border-radius: 10px;
-        
-    }
+}
+
+h1, h3, p {
+    margin: 0rem 2rem;
+    line-height: 1;
+}
+h1 {
     
-    .attribution a { color: hsl(228, 45%, 44%); }
+    font-family: 'Fraunces', serif;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1;
+}
 
-    @media screen and (max-width: 1440px) {
-        * {
-            font-size: .7rem;
-        }
+h2 {
+    margin: 2rem 0 0 2rem;
+    font-family: 'Montserrat', serif;
+    color: var(--darkcyan);
+    letter-spacing: .5rem;
+    font-size: 1.3rem;
+}
 
-        
-        
-    }
+h3 {
+    
+    font-family: 'Fraunces', serif;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: .8;
+    color: var(--darkcyan);
+}
 
-    @media screen and (max-width: 375px) {
-       
-        .container {
-            background-color: var(--cream);
-            display: grid;
-            grid-template-columns:  repeat(2, 1fr); 
-            grid-template-rows: 40% 55% 5%;
-            min-width: 80%;
-            min-height: 80%;
-            padding: 2rem;
-        }
+h4 {
+    
+    color: var(--darkcyan);
+    font-size: 1.2rem;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: line-through;
+    padding-top: .5rem;
+}
 
-        .preview {
-            margin: auto;
-            grid-column: 1/3;
-            grid-row: 1;
-            /* min-height: 100vh */
-             
-        }
 
-        img {
-            
-            width: 100%;
-            height: 100%;
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            border-bottom-left-radius: 0px;    
+p {
+    
+    color: var(--darkgrayishblue);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.4rem;
+    line-height: 1.5;
+}
 
-        }
-       
-        .details {
-            display: grid;
-            background-color: white;
-            border-bottom-left-radius: 20px;
-            border-bottom-right-radius: 20px;
-            border-top-right-radius: 0px;
-            padding: 2rem;
-            grid-column: 1/3;
-            grid-row: 2;
-            justify-content: center;
-        }
+.pricing {
+    display: flex;
+    
+}
+.cart img {
+    
+    width: 20px;
+    height: 20px;
+    margin-right: 1rem;
+}
 
-        h4 {
-            padding: 0;
-            margin: 0;
-        }
-        .attribution{
-           
-            display: grid;
-            grid-column: 1/3;
-            grid-row: 3;
-            text-align: center; 
-            justify-content: center;
-            align-content: center;
-            margin: 2rem 6rem;
-            border-radius: 10px;
-            
-        }
-    }
+.cart {      
+    display: flex;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    color: white;
+    border-radius: 10px;
+    background-color: var(--darkcyan);
+    margin: 1rem 2rem 2rem 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.attribution{
+    grid-column: 1/3;
+    grid-row: 2;
+    text-align: center;
+    border-radius: 10px;
+    background-color: white;
+    font-family: Montserrat;
+    font-size: 1rem;
+    margin: auto;
+    padding: 1rem;
+}
