--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@
 
 
 .container {
-
     background-color: var(--cream);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -72,7 +71,7 @@ h2 {
 h3 {
     
     font-family: 'Fraunces', serif;
-    font-size: 3rem;
+    font-size: 2.75rem;
     font-weight: 700;
     line-height: .8;
     color: var(--darkcyan);
@@ -129,4 +128,31 @@ p {
     font-size: 1rem;
     margin: auto;
     padding: 1rem;
+}
+
+@media screen and (max-width: 1440px) {
+    * {
+        font-size: 10px;
+    }
+
+    .container {
+        grid-template-rows: 80vh 20vh;
+        place-items: center stretch ;
+    }
+    
+    img, .details {
+        width: 20vw;
+    }
+    .attribution{
+        display: grid;
+        grid-column: 1/3;
+        grid-row: 2;
+        text-align: center;
+        border-radius: 10px;
+        background-color: red;
+        font-family: Montserrat;
+        font-size: 13px;
+        margin: 0rem 10rem 0rem 10rem;
+        padding: .75rem;
+    }
 }
