--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@
     --darkgrayishblue: hsl(228, 12%, 48%);
     }
 
-* {
-    margin: 0;
-    padding: 0;
-}
+    * {
+        margin: 0;
+        padding: 0;
+    }
 
 
-
+    
 .container {
 
     background-color: var(--cream);
@@ -23,19 +23,18 @@
 }
 
 .preview {
-    display: grid;
-    grid-column: 1/2;
-    grid-row: 1;
-    justify-items: right;
-}
-
-img {
+    background-image: url('images/image-product-desktop.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
     height: 70vh;
     width: 23vw;
+    grid-column: 1/2;
+    grid-row: 1;
+    justify-self: right;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    
 }
+
 
 .details {
     display: grid;
@@ -130,3 +129,94 @@ p {
     margin: auto;
     padding: 1rem;
 }
+
+@media screen and (max-width: 1440px){
+    * {
+        font-size: .8rem;
+    }
+
+    .preview {
+        background-size: 120%;
+    }
+
+   
+}
+
+@media screen and (max-width: 375px){
+    * {
+        font-size: .7rem;
+    }
+
+    .container {
+        
+        
+        background-color: var(--cream);
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 40vh 60vh;
+        place-items: center;
+        
+    }
+
+    .preview {
+        display: grid;
+        justify-self: center;
+        
+        background-image: url('images/image-product-mobile.jpg');
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        height: 90%;
+        width: 90vw;
+        background-size: 100%;
+        grid-column: 1/3;
+        grid-row: 1;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 20px;
+    }
+
+    
+    .details {
+        align-self: baseline;
+        display: grid;
+        height: 57vh;
+        width: 90vw;
+        background-color: white;
+        grid-column: 1/3;
+        grid-row: 2;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 20px;   
+        border-bottom-left-radius: 20px;   
+    }
+
+    .attribution{
+        display: none;
+        grid-column: 1/3;
+        grid-row: 3;
+        text-align: center;
+        border-radius: 10px;
+        background-color: white;
+        font-family: Montserrat;
+        font-size: 1rem;
+        margin: auto;
+        padding: 1rem;
+    }
+
+    .cart {      
+        display: flex;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1.2rem;
+        color: white;
+        border-radius: 10px;
+        background-color: var(--darkcyan);
+        margin: 1rem 2rem 2rem 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
+
+
+
+
