--- a/styles.css
+++ b/styles.css
@@ -144,42 +144,43 @@ p {
 
 @media screen and (max-width: 375px){
     * {
-        font-size: .7rem;
+        font-size: .6rem;
     }
 
     .container {
-        
-        
-        background-color: var(--cream);
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 40vh 60vh;
-        place-items: center;
+        background-color: var(--cream);
         
+        grid-template-columns: 1fr;
+        grid-template-rows: 45vh 55vh;
+        justify-items: center;
+        align-items: end;
+       
     }
 
     .preview {
-        display: grid;
-        justify-self: center;
-        
+        background-image: none;
         background-image: url('images/image-product-mobile.jpg');
-        background-repeat: no-repeat;
+        /* background-repeat: no-repeat; */
+        /* background-color: red; */
         background-position: center bottom;
-        height: 90%;
+        background-size: 110% 100%;
+        /* margin: 1rem 1rem 0 1rem; */
+        height: 42vh;
         width: 90vw;
-        background-size: 100%;
         grid-column: 1/3;
         grid-row: 1;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 0px;
         border-top-right-radius: 20px;
+        justify-self: center;
     }
 
     
     .details {
-        align-self: baseline;
         display: grid;
-        height: 57vh;
+        align-self: baseline;
+        height: 52vh;
         width: 90vw;
         background-color: white;
         grid-column: 1/3;
